--- a/App/Views/absence.twig
+++ b/App/Views/absence.twig
@@ -9,6 +9,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">{{ page.title }} <a href="{{ path_for('addAbsence') }}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></h1>
+                    {% if(page.msg_err!=null) %}
+                        <div class="alert alert-info" role="alert">{{ page.msg_err }}</div>
+                    {% endif %}
                     <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
